--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </style>
 </head>
 <body>
-    <h1>Subpage Links</h1>
+    <h1>ScreenSavii</h1>
     <div class="carousel-container">
         <div class="carousel">
             <div class="card">
