--- a/Bubblii/index.html
+++ b/Bubblii/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bubble Animation</title>
+    <title>Bubblii</title>
     <style>
         body {
             background-color: #ffffff; /* Default light mode background */
