--- a/index.html
+++ b/index.html
@@ -144,6 +144,24 @@
             Utility in Time
             </div>
         </a>
+        <a href="Codeii/" class="floating-button" style="--hover-color: #2fff00;">
+            <div class="tooltip">
+            <strong>Codeii</strong><br>
+            Imitation of Knowledge
+            </div>
+        </a>
+        <a href="Snowii/" class="floating-button" style="--hover-color: #dcd0ce;">
+            <div class="tooltip">
+            <strong>Snowii</strong><br>
+            Cold in Comfort
+            </div>
+        </a>
+        <a href="Orbitii/" class="floating-button" style="--hover-color: #1e1e1e;">
+            <div class="tooltip">
+            <strong>Orbitii</strong><br>
+            Surrounded by Curiosity
+            </div>
+        </a>
     </div>
     <style>
         .floating-button:hover {
