--- a/Page 2/index.html
+++ b/Page 2/index.html
@@ -108,7 +108,12 @@
             Dreams of Simplicity
             </div>
         </a>
-
+        <a href="Fireii/" class="floating-button" style="--hover-color: #3cb371;">
+            <div class="tooltip">
+            <strong>Fireii</strong><br>
+            Warmth in Destruction
+            </div>
+        </a>
 
 
     </div>
