--- a/Page 2/index.html
+++ b/Page 2/index.html
@@ -114,6 +114,12 @@
             Warmth in Destruction
             </div>
         </a>
+        <a href="Aurorii/" class="floating-button" style="--hover-color: #3cb371;">
+            <div class="tooltip">
+            <strong>Aurorii</strong><br>
+            This one has quotes.
+            </div>
+        </a>
 
 
     </div>
