Removed, THE QUOTE and added some more

--- a/Page 2/Aurorii/index.html
+++ b/Page 2/Aurorii/index.html
@@ -147,8 +147,25 @@
             "Fish are the best thing since sliced bread.",
             "Fish ARE sliced bread.",
             "Thank god i'm not a fish. - A fish",
-            "Hot quotes near you, <a href='Why/' target='_blank' style='color: lightblue; text-decoration: underline;'>click here to find out more</a>.",
-                ];
+            "I'm Batman - Batman",
+            "Justice - Batman",
+            "What you did was, not nice!",
+            "Hey look, a quote!",
+            "Creeper? Aw man.",
+            "FLINT AND STEEL!",
+            "The nether...",
+            "RELEASE! - Jack Black",
+            "RELEASE! - Silksong Fandom",
+            "I greatly enjoy Lebron James - Jack : AKA : Batman",
+            "Only you can prevent foresst fires, even though you're probably nowhere near a forest.",
+            "A broken clock is right twice a day, which is why you should buy a new clock.",
+            "Don't buy salt, just go dry the ocean.",
+            "Only idiots spend money on food - guy who starved",
+            "I'm evil - Kanye",
+            "A shrimp fried this rice? cool.",
+            "Each quote represents a person, and this webiste is a really cramped DMV office.",
+            "Close your eyes and pretend you're doing something productive.",
+              ];
 
         const quoteElement = document.getElementById('quote');
 
