--- a/Page 2/Aurorii/index.html
+++ b/Page 2/Aurorii/index.html
@@ -93,7 +93,7 @@
             "It is okay to not be okay. Just don't give up.",
             "The only limit to our realization of tomorrow will be our doubts of today.",
             "You are never too old to set another goal or to dream a new dream.",
-            "Somebody belives in you.",
+            "Somebody believes in you.",
             "You are braver than you believe, stronger than you seem, and smarter than you think.",
             "I trust you.",
             "You are enough just as you are.",
@@ -116,7 +116,7 @@
             "Hey ya'll, Scott here. - Scott the Woz",
             "Oh hey, I didn't see you there. - Scott the Woz",
             "Why are you still here? - Scott the Woz",
-            "There's a penny on the ground somehwere waiting for you.",
+            "There's a penny on the ground somewhere waiting for you.",
             "Hang on, i dropped my quote, gimme a second.",
             "Ah yes, the classic 'I don't know what to say' quote.",
             "You are a unique individual with your own strengths and weaknesses.",
@@ -132,7 +132,7 @@
             "SEA SALT!!!",
             "Are you sure?",
             "Where is Omniman?",
-            "There's plenty of fish in the sea, beacuse it's really, really big.",
+            "There's plenty of fish in the sea, because it's really, really big.",
             "Thank god fish aren't into cash.",
             "Man, I love fish.",
             "Fish are friends, not food.",
@@ -157,13 +157,13 @@
             "RELEASE! - Jack Black",
             "RELEASE! - Silksong Fandom",
             "I greatly enjoy Lebron James - Jack : AKA : Batman",
-            "Only you can prevent foresst fires, even though you're probably nowhere near a forest.",
+            "Only you can prevent forest fires, even though you're probably nowhere near a forest.",
             "A broken clock is right twice a day, which is why you should buy a new clock.",
             "Don't buy salt, just go dry the ocean.",
-            "Only idiots spend money on food - guy who starved",
+            "Only idiots spend money on food - some guy who starved",
             "I'm evil - Kanye",
             "A shrimp fried this rice? cool.",
-            "Each quote represents a person, and this webiste is a really cramped DMV office.",
+            "Each quote represents a person, and this website is a really cramped DMV office.",
             "Close your eyes and pretend you're doing something productive.",
               ];
 
